--- a/README.org
+++ b/README.org
@@ -6,13 +6,17 @@
 
 ToyDB is a relational database implemented in Rust for learning purposes. ToyDB is unique in that it uses an actor concurrency model with [[https://github.com/actix/actix][Actix]], asynchronous I/O with [[https://github.com/tokio-rs/tokio][Tokio]], and a lisp-like query syntax. However, besides these implementation details, this database seeks to follow database systems textbook implementation guidelines.
 
-** TODO To-Do 
+** TODO To-Do [2/5]
 
 *** DONE Buffer Manager 
-CLOSED: [2023-11-26 Sun 17:12]
+CLOSED: [2023-11-26 Sun 17:14]
+
+Largely complete: see [[./src/engine/buffer_pool.rs][buffer_pool.rs]].
 
 *** DONE Record Utilities / Heap Files
 CLOSED: [2023-11-26 Sun 17:12]
+
+Largely complete: see [[./src/engine/heap.rs][heap.rs]].
 
 *** TODO Indexing
 
