--- a/README.org
+++ b/README.org
@@ -4,7 +4,7 @@
 
 ToyDB is a relational database implemented in Rust for learning purposes. ToyDB is unique in that it uses an actor concurrency model with [[https://github.com/actix/actix][Actix]], asynchronous I/O with [[https://github.com/tokio-rs/tokio][Tokio]], and a lisp-like query syntax. However, besides these implementation details, this database seeks to follow database systems textbook implementation guidelines.
 
-* TODO To-Do [2/5]
+* TODO To-Do [3/5]
 
 ** DONE Buffer Manager 
 CLOSED: [2023-11-26 Sun 17:14]
@@ -16,11 +16,14 @@ CLOSED: [2023-11-26 Sun 17:12]
 
 Largely complete: see [[./src/engine/heap.rs][heap.rs]].
 
-** TODO Indexing
+** DONE Indexing
+CLOSED: [2023-12-01 Fri 14:49]
 
-In progress: see [[./src/engine/index.rs][index.rs]].
+Largely complete: see [[./src/engine/index.rs][index.rs]].
 
-** TODO Query Processor
+** TODO Query Processor [0/1]
+
+*** TODO Catalogue
 
 ** TODO Connection Manager
 
