--- a/README.org
+++ b/README.org
@@ -21,9 +21,25 @@ CLOSED: [2023-12-01 Fri 14:49]
 
 Largely complete: see [[./src/engine/index.rs][index.rs]].
 
-** TODO Query Processor [0/1]
+** TODO Query Processor [0/0]
 
-*** TODO Catalogue
+*** Catalogue [1/3]
+
+**** DONE Type lookups
+CLOSED: [2023-12-05 Tue 09:02]
+
+**** TODO Index records
+
+**** TODO Constraints
+
+*** Table creation [1/2]
+
+**** DONE Basic tables
+CLOSED: [2023-12-05 Tue 09:02]
+
+**** TODO Constraints
+
+*** Insertion
 
 ** TODO Connection Manager
 
